refactor: refactor tests